--- a/MothWeb/MothWeb/packages.config
+++ b/MothWeb/MothWeb/packages.config
@@ -4,5 +4,9 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
+  <package id="mongocsharpdriver" version="2.2.3" targetFramework="net451" />
+  <package id="MongoDB.Bson" version="2.2.3" targetFramework="net451" />
+  <package id="MongoDB.Driver" version="2.2.3" targetFramework="net451" />
+  <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
 </packages>
